Updated CORS class